# SDL2-Easy-Config

./: README.md
CMakeListsTemplate/: CMakeLists.txt
